--- a/app/src/main/res/layout/shop_fragment.xml
+++ b/app/src/main/res/layout/shop_fragment.xml
@@ -7,6 +7,12 @@
     android:layout_margin="10dp"
     tools:context=".ui.ShopFragment">
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/load"
+        android:id="@+id/btnLoad"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
